--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
     <li><a href="#"><i class="fas fa-kaaba"></i> Islam</a></li>
     <li><a href="writing/writing.html"><i class="fas fa-pen-nib"></i> Writing</a></li>
-    <li><a href="video/video.html"><i class="fas fa-video"></i> Video</a></li>
+    <li><a href="video/index.html"><i class="fas fa-video"></i> Video</a></li>
     <li><a href="Contact/contact.html"><i class="fas fa-phone-alt"></i> Contact</a></li>
   </ul>
 </div>
